fixed double scroll bar

--- a/public/css/admin-managesupers.css
+++ b/public/css/admin-managesupers.css
@@ -1,9 +1,9 @@
 #background {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
     background-color: gainsboro;
     margin: 0;
-    overflow: scroll;
 }
 
 .hidden-div {
@@ -12,14 +12,14 @@
 
 #employee-manage, #employee-select {
     width: 90%;
-    height: auto;
+    height: 90%;
     max-width: 600px;
     background-color: white;
     margin: 0 auto;
     text-align: center;
     box-shadow: 0 0 15px grey;
     padding-bottom: 20px;
-    overflow: hidden;
+    overflow: scroll;
     position: relative;
 }
 
